applications/graphify-ui/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: graphify-ui
spec:
  selector:
    app: graphify-ui
  ports:
    - port: 80
      targetPort: 80
